--- a/requirements.txt
+++ b/requirements.txt
@@ -23,4 +23,4 @@ gunicorn==23.0.0
 # -----------------------------
 python-multipart>=0.0.18
 python-dotenv==1.1.1
-nltk>=3.8  # চাঙ্কিং-এর জন্য sent_tokenize দরকার
+nltk>=3.8  # sent_tokenize 
